[gd_scene load_steps=2 format=3 uid="uid://cc0c6bo2wcejw"]

[ext_resource type="Script" path="res://Scenes/UI/GameOverScreen/end_panel.gd" id="1_nqexy"]

[node name="EndPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 2400.0
script = ExtResource("1_nqexy")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.262745, 0.262745, 0.686275)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="Box" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Upper" type="MarginContainer" parent="Margin/Box"]
layout_mode = 2
size_flags_vertical = 3

[node name="YouDiedBruhLabel" type="RichTextLabel" parent="Margin/Box/Upper"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.854902, 0.854902, 0.854902, 1)
theme_override_font_sizes/normal_font_size = 180
bbcode_enabled = true
text = "[center]You failed to escape"
fit_content = true

[node name="Middle" type="MarginContainer" parent="Margin/Box"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="RichTextLabel" parent="Margin/Box/Middle"]
layout_mode = 2
theme_override_colors/default_color = Color(0.854902, 0.854902, 0.854902, 1)
theme_override_font_sizes/normal_font_size = 64
text = "Papaj"
fit_content = true

[node name="Bottom" type="MarginContainer" parent="Margin/Box"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/Box/Bottom"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="ResetTimerLabel" type="RichTextLabel" parent="Margin/Box/Bottom/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.854902, 0.854902, 0.854902, 1)
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "Emm"
fit_content = true

[node name="ResetButton" type="Button" parent="Margin/Box/Bottom/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 74
text = "RESET"

[node name="EndButton" type="Button" parent="Margin/Box/Bottom/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 74
text = "QUIT"

[connection signal="pressed" from="Margin/Box/Bottom/VBoxContainer/ResetButton" to="." method="on_reset_bttn_press"]
[connection signal="pressed" from="Margin/Box/Bottom/VBoxContainer/EndButton" to="." method="on_end_bttn_press"]
